k8s/namespace-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ophirpay
  labels:
    app.kubernetes.io/name: ophirpay
    app.kubernetes.io/part-of: ophirpay
